# otus-bayan

./: .gitignore  CMakeLists.txt  File.cpp  File.hpp  README.md  filter_files.cpp  filter_files.hpp  hash.cpp  hash.hpp  input.cpp  input.hpp  main.cpp  test_utility.cpp
.github/workflows/: main.yml
docs/: Doxyfile
docs/html/: _file_8cpp.html  _file_8cpp__incl.map  _file_8cpp__incl.md5  _file_8hpp.html  _file_8hpp__dep__incl.map  _file_8hpp__dep__incl.md5  _file_8hpp__incl.map  _file_8hpp__incl.md5  _file_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_c_r_c32_hasher-members.html  class_c_r_c32_hasher.html  class_c_r_c32_hasher__coll__graph.map  class_c_r_c32_hasher__coll__graph.md5  class_file-members.html  class_file.html  class_hash-members.html  class_hash.html  class_hash__inherit__graph.map  class_hash__inherit__graph.md5  class_m_d5_hasher-members.html  class_m_d5_hasher.html  class_m_d5_hasher__coll__graph.map  class_m_d5_hasher__coll__graph.md5  class_s_t_d_hash-members.html  class_s_t_d_hash.html  class_s_t_d_hash__coll__graph.map  class_s_t_d_hash__inherit__graph.md5  classes.html  files.html  filter__files_8cpp.html  filter__files_8cpp__incl.map  filter__files_8cpp__incl.md5  filter__files_8hpp.html  filter__files_8hpp__dep__incl.map  filter__files_8hpp__dep__incl.md5  filter__files_8hpp__incl.map  filter__files_8hpp__incl.md5  filter__files_8hpp_source.html  (+39 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+11 more)
hash-library/: crc32.cpp  md5.cpp
tests/: pic18f-2.txt  pic18f-3.txt
tests/folder1/: DS39564B - page ii -3.txt
tests/folder1/folder11/: in this publication regarding-2.txt
